--- a/template1/index.html
+++ b/template1/index.html
@@ -55,7 +55,10 @@
                     <div class="login-popup animate" id="pop">
                         <a href="javascript:void(0)" id="close" class="close">&times;</a>
                         <form method="get" action="login.php">
-                            <input type="text" />
+                            <h1>SIGN IN</h1>
+                            <input type="email" placeholder="Email">
+                            <input type="password" placeholder="Password">
+                            <button type="submit" style="margin-top:20px;">Login</button>
                         </form>
                     </div>
                     </div>
