Editing to Power Napper

--- a/power_napper/index.html
+++ b/power_napper/index.html
@@ -19,6 +19,7 @@
                 </div>
                 <div class="btns">
                     <a href="#about" class="scrollbtn">About Us</a>
+					<a href="#team" class="scrollbtn">Team</a>
                 </div>
             </div>
         </div>
@@ -36,31 +37,35 @@
                 <div class="brand">
                     <h3>Late for Work?</h3>
                     <p>Not any more. Power Napper, a easily wrist wearable device, is being designed at NUST University to wake you up at the right time with sleep detection capability and smart mechanism to interact with your sensitive body.</p>
-                    <a href="about.html" class="btn">About Us</a>
+    
                 </div>
             </div>
         </div>
-        <div class="services" id="sign">
+        <div class="services" id="team">
             <div class="heading">
                 <div class="brand">
-                    <h3>Sign Up</h3>
-                    <p>Sign up now to get premium features, coupons and discounts</p>
-                    <a href="about.html" class="btn">Sign Up</a>
+                    <h3>Team</h3>
                 </div>
+                    <div style="width:90%;margin:auto">
+						<div style="width:25%;float:left;">
+							<a href="https://www.linkedin.com/in/samiullah-jamil-6a1474a3/" style="color:white;font-size:1.5rem;display:block;width:100%;text-align:center;">SAMIULLAH JAMIL</a>
+							<p style="font-size:1rem">Bachelor's of Engineeing</p>
+						</div>
+						<div style="width:25%;float:left;">
+							<a href="https://www.linkedin.com/in/syed-maaz-ahmed-4128ab103/" style="color:white;font-size:1.5rem;display:block;width:100%;text-align:center;">SYED MAAZ AHMED</a>
+							<p style="font-size:1rem">Bachelor's of Engineeing</p>
+						</div>
+						<div style="width:25%;float:left;">
+							<a href="https://www.linkedin.com/in/zahid-shakeel-0a4473105/" style="color:white;font-size:1.5rem;display:block;width:100%;text-align:center;">ZAHID SHAKEEL</a>
+							<p style="font-size:1rem">Bachelor's of Engineeing</p>
+						</div>
+						<div style="width:25%;float:left;">
+							<a href="https://www.facebook.com/ammarsaeedchaudhry" style="color:white;font-size:1.5rem;display:block;width:100%;text-align:center;">AMMAR SAEED CHAUDHRY</a>
+							<p style="font-size:1rem">Bachelor's of Engineeing</p>
+						</div>
+					</div>
             </div>
         </div>
-        <div style="width:100%;height:000px"></div>
-                    <div class="login-popup-bg" id="bg">
-                    <div class="login-popup animate" id="pop">
-                        <a href="javascript:void(0)" id="close" class="close">&times;</a>
-                        <form method="get" action="login.php">
-                            <h1>SIGN IN</h1>
-                            <input type="email" placeholder="Email">
-                            <input type="password" placeholder="Password">
-                            <button type="submit" style="margin-top:20px;">Login</button>
-                        </form>
-                    </div>
-                    </div>
                     <script>
                         /*var b = document.getElementById('loginbtn');
                         var w = document.getElementById('pop');
