--- a/smart_napper/index.html
+++ b/smart_napper/index.html
@@ -36,7 +36,7 @@
             <div class="heading" style="display:block;color:white;">
                 <div class="brand">
                     <h3>Late for Work?</h3>
-                    <p>Not any more. Power Napper, a easily wrist wearable device, is being designed at NUST University to wake you up at the right time with sleep detection capability and smart mechanism to interact with your sensitive body.</p>
+                    <p>Not any more. Smart Napper, a easily wrist wearable device, is being designed at NUST University to wake you up at the right time with sleep detection capability and smart mechanism to interact with your sensitive body.</p>
     
                 </div>
             </div>
